css/style.css
/* ... */
.timeline tr td.description{
	padding-bottom: 1em;
}
.timeline tr td.description span{
	position: relative;
	top: -0.2em;
	opacity: 0.8;
}
.timeline tr td span.desc-secondary,
.timeline tr td a.desc-secondary{
	padding-right: 1em;
	padding-left: 1em;
}
.timeline tr td div.right{
	padding-left: 1em;
}
.timeline tr.line-horizontal{
	background: url('/img/icons/line-h.svg') repeat-x 10px 12px;
	background-size: 4px;
}
.timeline tr td.date,
.timeline tr td.dot-td,
.timeline tr td.title span,
.timeline tr td a.desc-secondary,
.timeline tr td span.desc-secondary,
.timeline tr td div.right
{
	background: #fff;
}
.timeline tr td.dot-td{
	padding-top: 0;
	padding-bottom: 0;
	background: url('/img/icons/line-v.svg') repeat-y 30px 0px #fff;
	background-size: 4px 4px; 
}
.timeline tr td.dot-td.dot-td-outline{
	height: 60px;
	background: url('/img/icons/line-v-dashed.svg') repeat-y 31px #fff;
	background-size: 4px 4px; 
}
.timeline tr td.dot-td.end-dot{
	background: #fff;
}
.fixed-icon{
	position: absolute;
	top: 9pt;
}
.skill-list-tested{
	text-align: center;
}
.skill-component-div{
	width: 160px;
	height: 160px;
	margin: 1em;
	margin-bottom: 8em;
	display: inline-block;
	position: relative;
	background: #fff;
}
.skill-component-div *{
	pointer-events: none;
}
.skill-component-div img{
	left: 50%;
	top: 50%;
	position: absolute;
	transform: translate(-50%, -50%);
}
.skill-component-div .score,
.skill-component-div .ranking,
.skill-component-div .date{
	display: block;
	width: 50%;
	margin: 0 auto;
	text-align: center;
	position: relative;
}
.skill-component-div .score{
	font-size: 1.4em;
}
.skill-component-div .ranking{
	background: #f34;
	font-weight: bold;
	padding: 4pt 5pt;
	border-radius: 2px;
	color: #fff;
	text-transform: uppercase;
	margin-bottom: 1pt;
	margin-top: 3pt;
}
.skill-component-div .ranking.class10{ background: #00a80e }
.skill-component-div .ranking.class20{ background: #33BA29 }
.skill-component-div .ranking.class30{ background: #6dba29 }
.skill-component-div .date{
	opacity: 0.7;
}
#notification_area{
	display: block;
	width: 100%;
	height: 100px;
	position: fixed;
	background: url(/img/bg.jpg) #000;
	background-size: cover;
	z-index: 9999;
	box-shadow: 0 3px 10px -5px #000;
	opacity: 1;
	perspective: 200px;
	transform: translate3d(0px, -10px, 0px);
	transition: all .3s cubic-bezier(0.54, 0.04, 0, 0.93) 0s;
}
#notification_area.not-visible{
    opacity: 0;
	transform: translate3d(0px, -100px, 0px);
}
#notification_area .profile-pic{
	width: 110px;
	margin: 0.8em 1em;
	display: inline-block;
	float: left;
}
#notification_area hgroup{
	display: inline-block;
	color: #fff;
	margin-top: 1.5em;
	vertical-align: baseline;
	float: left;
	transform: scale(0.9,0.9);
	transform-origin: left;
}
#notification_area *{
	font-weight: 100 !important;
}
#notification_area .contacts{
	position: absolute;
	float: right;
	right: 1em;
	display: block;
	color: #fff;
	margin: 1em;
	margin-top: 1.7em;
	letter-spacing: 0.4pt;
}
#notification_area .contacts a{
	display: flex;
	align-items: center;
	padding: 0.1em 0;
	font-size: 0.8rem;
	color: #fff;

}
@media screen and (max-width: 980px) {
	#notification_area .contacts{
		display: none;
	}
	.timeline td.award-skills,
	.timeline td.url-skills{
		display: block;
		background: #fff !important;
		text-align: left;
		margin: 0.5em 0;
		padding-left: 1em;
		vertical-align: top;
		margin-top: -6px;
	}
	.desc-secondary{
		display: block;
		margin-top: 0.2em;
		padding-left: 0 !important;
		vertical-align: middle;
	}
	.desc-secondary img{
		display: inline-block;
		padding-top: 0.3em;
	}
	p{
		text-align: justify;
	}
}
@media screen and (max-width: 820px) {
	.small-talk{
		width: 100%;
	}

	#whois ul li span{
		display: inline-block;
		margin-right: 1em;
	}

	#whoami > hgroup > h1{
		margin-top: 0.2em;
		font-size: 5vw;
	}
	span.desc-secondary,
	a.desc-secondary{
		display: flex;
		align-items: center;
	}
}
@media screen and (max-width: 640px) {
	#whoami > hgroup > h1{
		font-size: 10vw;
		margin-bottom: 0.4rem;
	}
}
@media screen and (max-width: 520px) {
	#notification_area{
		text-align: left;
	}
	#notification_area .profile-pic{
		display: block;
		float: none;
		margin: 1em auto;
	}
	#notification_area hgroup{
		display: none;
	}
	
}
svg#artwork{
	width: 100%;
	height: 100%;
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	z-index: -1;
}

@media screen and (max-width: 960px) {
	svg#artwork{
		display: none;
		visibility: hidden;
	}
	
}
@keyframes loading-anim{
	0%{
		opacity: 0;
		transform: scale(0.5,0.5);
	}
	50%{ opacity: 1 }
	100%{
		opacity: 0;
		transform: scale(1,1);
	}
}
#loader{
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 100vw;
	height: 100vh;
	position: fixed;
	top: 0;
	left: 0;
	background: #fff;
	z-index: 9999;
	opacity: 1;
	transition: all .5s ease;
}
#loader span{
	padding-top: 0.2em;
	font-size: 8pt;
}
#loader.loaded{
	opacity: 0;
}
#loader svg.loader{
	transition: all 1s;
}
#loader.loaded svg.loader{
	transform: scale(1.5,1.5);
	opacity: 0;
}
#loader svg.loader{
	width: 50px;
	height: 50px;
}
#loader svg.loader circle{
	transform-origin: 50% 50%;
	animation: loading-anim 0.3s ease infinite;
}

